--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,14 +26,25 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-.bg {
+.triangle {
+  height: 0;
+  width: 0;
+  border-left: 18px solid transparent; /* Lado esquerdo transparente */
+  border-right: 18px solid transparent; /* Lado direito transparente */
+  border-bottom: 34px solid black; /* Borda inferior preta */
+  transform: rotate(326deg);
+  z-index: 2;
   position: absolute;
-  top: 43%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 200px;
-  width: 200px;
-  background: linear-gradient(90deg, #335fb4 0%, #2ae9c9 100%);
-  filter: blur(20px);
-  z-index: -1;
+}
+
+.triangle::after {
+  content: '';
+  position: absolute;
+  top: 4px; /* Ajuste a posição da borda preta */
+  left: -15px; /* Ajuste a posição da borda preta */
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent; /* Lado esquerdo transparente */
+  border-right: 15px solid transparent; /* Lado direito transparente */
+  border-bottom: 28px solid white; /* Lado inferior com a cor de fundo desejada */
 }
